[tool.poetry]
name = "ansible-generator"
version = "3.0.0"
description = "Ansible project generation tool"
authors = ["Kevin Kirsche <kev.kirsche@gmail.com>"]
license = "BSD-4-Clause"
readme = "README.md"

repository = "https://github.com/kkirsche/ansible-generator"
keywords = ["development", "ansible", "generator"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Development Status :: 5 - Production/Stable",
]


[tool.poetry.dependencies]
python = "^3.8"
sentry-sdk = "^1.6.0"
ansible = "*"

[tool.poetry.dev-dependencies]
black = { extras = ["colorama", "uvloop"], version = "^22.6.0" }
isort = { extras = ["colors"], version = "^5.10.1" }
mypy = "^0.961"
flake8 = "^4.0.1"
example-isort-sorting-plugin = "^0.0.3"
example-isort-formatting-plugin = "^0.0.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
ansible-generate = "ansible_generator:cli"

[tool.isort]
formatter = "example"
profile = "black"
remove_redundant_aliases = true
sort_order = "natural_plus"

[tool.mypy]
exclude = ""               # regular expression
follow_imports = "normal"
plugins = []
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = false
module = []
