[metadata]
license_files = LICENSE.txt

[bdist_wheel]
universal = 0

[options]
setup_requires = setuptools_scm

[isort]
profile = black

[flake8]
max-line-length = 88
max-complexity = 25
exclude =
    .git,
    __pycache__,
    old,
    build,
    dist
extend-ignore = E203, W503

[pylint]
max-line-length = 88

[pylint.messages_control]
disable = C0330, C0326