[metadata]
license_files = LICENSE.txt
name = ansible-generator
description = Generate ansible directory structures
long_description = file: README.md

[options]
setup_requires = setuptools_scm
packages = find:
install_requires =
    structlog
    python-json-logger
    sentry-sdk

[options.packages.find]
exclude =
    tests

[isort]
profile = black

[flake8]
max-line-length = 88
max-complexity = 25
exclude =
    .git,
    __pycache__,
    old,
    build,
    dist
extend-ignore = E203, W503

[pylint]
max-line-length = 88

[pylint.messages_control]
disable = C0330, C0326